--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "tslib": "^1.10.0",
         "zone.js": "~0.9.1",
         "@angular/cli": "~8.3.23",
-        "@angular/compiler-cli": "~8.2.14",
+        "@angular/compiler-cli": "~8.2.14"
 
     },
     "devDependencies": {
